# CMake-Static-Library-VS-Shared-Library

./: CMakeLists.txt  README.md
docker/: cmake.Dockerfile
src/app/: CMakeLists.txt  main.cpp
src/rectangle/: CMakeLists.txt  rectangle.cpp  rectangle.hpp
src/shape/: CMakeLists.txt  shape.cpp  shape.hpp
